<resources>
    <string name="app_name">Julio Cesar Vollup App</string>
    <string name="logo">company logo</string>
    <string name="description">Image</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="loginButton">Login</string>
    <string name="registerText">Não tem conta? Registre-se Aqui!</string>
    <string name="saldo">Saldo atual</string>
    <string name="rs">R$</string>
    <string name="number">8.888.888.88</string>
    <string name="textoUser">Olá, ##NOME##\nQual sua próxima operação?</string>
    <string name="top_left">Pagar\ncontas</string>
    <string name="top_right">Carregar\ncarteira</string>
    <string name="bottom_left">Histórico\nde Pagamentos</string>
    <string name="bottom_right">Fazer\ntransferência</string>
    <string name="firebaseUrl">https://vollup-app-android-default-rtdb.firebaseio.com/</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="registrar">Registrar</string>
    <string name="login_text">Já possui conta? Faça o Login.</string>

</resources>