<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".35"
            android:orientation="vertical"
            android:background="@drawable/top_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/company_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.153"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.231" />

                <TextView
                    android:id="@+id/saldoAtual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saldo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.128"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logo"
                    app:layout_constraintVertical_bias="0.079" />

                <TextView
                    android:id="@+id/rs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/saldo"
                    android:text="@string/rs"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/saldoAtual"
                    app:layout_constraintTop_toTopOf="@+id/saldo"
                    app:layout_constraintVertical_bias="0.07" />

                <TextView
                    android:id="@+id/saldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/rs"
                    android:text="@string/number"
                    android:gravity="bottom"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/rs"
                    app:layout_constraintTop_toBottomOf="@+id/saldoAtual"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


            <GridLayout
                android:id="@+id/GridLayout1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:columnCount="2"
                android:rowCount="2"
                android:orientation="vertical"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/head">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginStart="30dp"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1" >

                    <ImageView
                        android:id="@+id/TOP_START"
                        android:layout_width="84dp"
                        android:layout_height="64dp"
                        android:src="@drawable/top_left"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.128"
                        app:layout_constraintVertical_bias=".5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/description" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/top_left"
                        android:textColor="@color/dark_blue"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="@+id/TOP_START"
                        app:layout_constraintTop_toBottomOf="@+id/TOP_START"
                        app:layout_constraintVertical_bias="0" />

                    <View
                        android:layout_width="50dp"
                        android:layout_height="15dp"
                        android:background="@color/neon_green"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.2" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginEnd="30dp"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1">
                    <ImageView
                        android:id="@+id/TOP_END"
                        android:layout_width="84dp"
                        android:layout_height="64dp"
                        android:src="@drawable/top_right"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.128"
                        app:layout_constraintVertical_bias=".5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/description"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/top_right"
                        android:textColor="@color/dark_blue"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="@+id/TOP_END"
                        app:layout_constraintTop_toBottomOf="@+id/TOP_END"
                        app:layout_constraintVertical_bias="0" />

                    <View
                        android:layout_width="50dp"
                        android:layout_height="15dp"
                        android:background="@color/neon_green"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.2" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginStart="30dp"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1">
                    <ImageView
                        android:id="@+id/BOTTOM_START"
                        android:layout_width="54dp"
                        android:layout_height="64dp"
                        android:src="@drawable/bottom_left"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.128"
                        app:layout_constraintVertical_bias=".2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/description"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bottom_left"
                        android:textColor="@color/dark_blue"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="@+id/BOTTOM_START"
                        app:layout_constraintTop_toBottomOf="@+id/BOTTOM_START"
                        app:layout_constraintVertical_bias="0" />

                    <View
                        android:layout_width="50dp"
                        android:layout_height="15dp"
                        android:background="@color/neon_green"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.2" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginEnd="30dp"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1" >
                    <ImageView
                        android:id="@+id/BOTTOM_END"
                        android:layout_width="54dp"
                        android:layout_height="64dp"
                        android:src="@drawable/bottom_left"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.128"
                        app:layout_constraintVertical_bias=".2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/description"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bottom_right"
                        android:textColor="@color/dark_blue"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="@+id/BOTTOM_END"
                        app:layout_constraintTop_toBottomOf="@+id/BOTTOM_END"
                        app:layout_constraintVertical_bias="0" />

                    <View
                        android:layout_width="50dp"
                        android:layout_height="15dp"
                        android:background="@color/neon_green"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.2" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </GridLayout>

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".15"
            android:orientation="vertical"
            android:background="#e9eaeb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body">
        </LinearLayout>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="-267dp">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="70dp"
            app:cardElevation="0dp"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.31">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/textoUser"
                android:textColor="@color/dark_blue"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/y_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo"
            android:src="@drawable/y_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.92" />

        <ImageView
            android:id="@+id/profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/description"
            android:src="@drawable/profile_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/y_logo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".96" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/description"
            android:src="@drawable/menu_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/y_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".96" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>